third_party/WebKit/Source/core/style/GridTrackSize.h
@@ -103,7 +103,8 @@ class GridTrackSize {
   bool operator==(const GridTrackSize& other) const {
     return m_type == other.m_type &&
            m_minTrackBreadth == other.m_minTrackBreadth &&
-           m_maxTrackBreadth == other.m_maxTrackBreadth;
+           m_maxTrackBreadth == other.m_maxTrackBreadth &&
+           m_fitContentTrackBreadth == other.m_fitContentTrackBreadth;
   }
 
   void cacheMinMaxTrackBreadthTypes() {
